<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="online.ors.oldraddisold.activity.HomeActivity">

	<android.support.design.widget.AppBarLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay"
			app:titleTextAppearance="@style/ToolbarTitle"/>

		<ImageView
			android:id="@+id/iv_wallet"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/walletPrimary"
			android:contentDescription="@string/content_description"
			android:paddingBottom="@dimen/standard"
			android:src="@drawable/wallet"
			android:visibility="gone"/>
	</android.support.design.widget.AppBarLayout>


	<FrameLayout
		android:id="@+id/fl_container"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"/>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:cardBackgroundColor="@color/white"
		app:cardCornerRadius="0dp"
		app:cardElevation="@dimen/thin">

		<LinearLayout
			android:id="@+id/ll_bottom"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/tv_pickup"
				style="@style/bottom_navigation"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableTop="@drawable/selector_pickup"
				android:text="@string/pickup"
				android:textColor="@color/selector_pickup"/>

			<TextView
				android:id="@+id/tv_wallet"
				style="@style/bottom_navigation"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableTop="@drawable/selector_wallet"
				android:text="@string/wallet"
				android:textColor="@color/selector_wallet"/>

			<TextView
				android:id="@+id/tv_rate_card"
				style="@style/bottom_navigation"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableTop="@drawable/selector_rate_card"
				android:text="@string/rate_card"
				android:textColor="@color/selector_rate_card"/>

			<TextView
				android:id="@+id/tv_feed"
				style="@style/bottom_navigation"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableTop="@drawable/selector_feeds"
				android:text="@string/feed"
				android:textColor="@color/selector_feed"/>

			<TextView
				android:id="@+id/tv_explore"
				style="@style/bottom_navigation"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:drawableTop="@drawable/selector_explore"
				android:text="@string/explore"
				android:textColor="@color/selector_explore"/>
		</LinearLayout>
	</android.support.v7.widget.CardView>
</LinearLayout>
