<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/sign_up_with_white_bg"
	android:clipChildren="false"
	android:clipToPadding="false"
	android:gravity="center"
	android:orientation="vertical"
	tools:context="online.ors.oldraddisold.activity.SignUpActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sign_up"
		android:textAllCaps="true"
		android:textColor="@color/maroon"
		android:textSize="34sp"
		android:textStyle="bold"/>

	<View
		android:layout_width="0.3dp"
		android:layout_height="@dimen/huge"
		android:layout_marginBottom="@dimen/standard"
		android:layout_marginTop="@dimen/standard"
		android:background="@color/black"/>

	<FrameLayout
		android:id="@+id/fl_avatar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<de.hdodenhof.circleimageview.CircleImageView
			android:id="@+id/iv_avatar"
			android:layout_width="118dp"
			android:layout_height="118dp"
			android:contentDescription="@string/content_description"
			android:src="@drawable/user"/>

		<android.support.design.widget.FloatingActionButton
			android:id="@+id/fab_camera"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end|bottom"
			android:src="@drawable/camera"
			app:fabSize="mini"/>
	</FrameLayout>

	<android.support.design.widget.TextInputEditText
		android:id="@+id/et_name"
		style="@style/EditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_your_name"
		android:inputType="textCapWords"/>

	<android.support.design.widget.TextInputEditText
		android:id="@+id/et_email"
		style="@style/EditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_your_email_id"
		android:inputType="textEmailAddress"/>

	<android.support.v7.widget.AppCompatButton
		android:id="@+id/btn_submit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/narrow"
		android:layout_marginEnd="@dimen/big"
		android:layout_marginStart="@dimen/big"
		android:layout_marginTop="@dimen/dimen_28"
		android:background="@color/maroon"
		android:paddingBottom="@dimen/standard"
		android:paddingTop="@dimen/standard"
		android:text="@string/submit"
		android:textColor="@color/white"
		android:textSize="@dimen/text_btn"
		android:textStyle="bold"/>

	<!--<TextView
		android:layout_width="wrap_content"
		android:text="@string/terms_and_conditions"
		android:layout_height="wrap_content"/>-->
</LinearLayout>
