<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="online.ors.oldraddisold.activity.PostPickupActivity">

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:contentDescription="@string/content_description"
		android:scaleType="fitXY"
		android:src="@drawable/bg_thank"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/dimen_28"
		android:text="@string/thank_you"
		android:textColor="@color/green"
		android:textSize="30sp"/>

	<View
		android:layout_width="250dp"
		android:layout_height="0.7dp"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/thick"
		android:background="@color/black"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/narrow"
		android:gravity="center"
		android:paddingEnd="@dimen/standard"
		android:paddingStart="@dimen/standard"
		android:paddingTop="@dimen/standard"
		android:text="@string/msg_schedule_success"
		android:textColor="@color/black"/>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginEnd="@dimen/standard"
		android:layout_marginStart="@dimen/standard"
		android:layout_weight="1">

		<android.support.v7.widget.AppCompatButton
			android:id="@+id/btn_schedule"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:background="@color/green"
			android:paddingBottom="@dimen/narrow"
			android:paddingTop="@dimen/narrow"
			android:text="@string/go_to_my_schedule"
			android:textAllCaps="false"
			android:textColor="@color/white"
			android:textSize="@dimen/text_btn"
			android:textStyle="bold"/>
	</FrameLayout>

</LinearLayout>
