<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	tools:context="online.ors.oldraddisold.activity.ContactUsActivity">

	<include layout="@layout/toolbar"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/large"
		android:gravity="center"
		android:text="@string/hint_inquiry"
		android:textColor="@color/black"/>

	<View
		android:layout_width="100dp"
		android:layout_height="0.5dp"
		android:layout_marginTop="@dimen/standard"
		android:background="@color/black"/>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/standard"
		android:layout_marginStart="@dimen/standard"
		android:layout_marginTop="@dimen/large">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/standard"
				android:paddingEnd="@dimen/thick"
				android:paddingStart="@dimen/thick"
				android:paddingTop="@dimen/standard"
				android:text="@string/contact_information"
				android:textColor="@color/colorPrimary"
				android:textSize="@dimen/text_medium"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/grey_e0e0e0"/>

			<TextView
				android:id="@+id/tv_address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:drawableEnd="@drawable/ic_map_location_green_24dp"
				android:gravity="center_vertical"
				android:paddingBottom="@dimen/standard"
				android:paddingEnd="@dimen/thick"
				android:paddingStart="@dimen/thick"
				android:paddingTop="@dimen/standard"
				android:text="@string/address"
				android:textColor="@color/black"
				android:textSize="@dimen/text_medium"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autoLink="map"
				android:paddingEnd="@dimen/thick"
				android:paddingStart="@dimen/thick"
				android:text="@string/ors_address"
				android:textSize="@dimen/text_small"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginEnd="@dimen/thick"
				android:layout_marginStart="@dimen/thick"
				android:layout_marginTop="@dimen/narrow"
				android:background="@color/grey_aaaaaa"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingBottom="@dimen/standard"
				android:paddingEnd="@dimen/thick"
				android:paddingStart="@dimen/thick"
				android:paddingTop="@dimen/standard"
				android:text="@string/email_id"
				android:textColor="@color/black"
				android:textSize="@dimen/text_medium"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autoLink="email"
				android:paddingEnd="@dimen/thick"
				android:paddingStart="@dimen/thick"
				android:text="@string/ors_mail"
				android:textSize="@dimen/text_small"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_marginBottom="@dimen/large"
				android:layout_marginEnd="@dimen/narrow"
				android:layout_marginStart="@dimen/thick"
				android:layout_marginTop="@dimen/thick"
				android:background="@color/grey_aaaaaa"/>
		</LinearLayout>
	</android.support.v7.widget.CardView>
</LinearLayout>
