<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_auth"
	android:gravity="center"
	android:orientation="vertical"
	tools:context="online.ors.oldraddisold.activity.AuthActivity">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/huge"
		android:text="@string/sign_in"
		android:textAllCaps="true"
		android:textColor="@color/maroon"
		android:textSize="36sp"
		android:textStyle="bold"/>

	<View
		android:layout_width="0.3dp"
		android:layout_height="@dimen/huge"
		android:layout_marginTop="@dimen/standard"
		android:background="@color/black"/>

	<android.support.design.widget.TextInputEditText
		android:id="@+id/et_mobile"
		style="@style/EditText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/enter_mobile_no_here"
		android:inputType="phone"/>

	<android.support.v7.widget.AppCompatButton
		android:id="@+id/btn_submit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="@dimen/big"
		android:layout_marginStart="@dimen/big"
		android:layout_marginTop="@dimen/dimen_28"
		android:background="@color/maroon"
		android:paddingBottom="@dimen/standard"
		android:paddingTop="@dimen/standard"
		android:text="@string/submit"
		android:textColor="@color/white"
		android:textSize="@dimen/text_btn"
		android:textStyle="bold"/>
</LinearLayout>
